# GPIB_INTERFACE

./: README.md  analysis.md  implementation.md  project.md  tests.md
C++/: CMakeLists.txt  main.cpp  main.h
C++/Ar488QtConsoleProject/: Ar488QtConsole.pro  CMakeLists.txt  README.md
C++/Ar488QtConsoleProject/src/: ar488controller.cpp  ar488controller.h  main.cpp  mainwindow.cpp  mainwindow.h
C++/Ar488QtConsoleProject/src/core/: constants.h  csvutils.cpp  csvutils.h  scpiutils.cpp  scpiutils.h
C++/Ar488QtConsoleProject/src/models/: datalogjob.cpp  datalogjob.h  equipment.h
C++/Ar488QtConsoleProject/src/protocol/: ar488protocol.cpp  ar488protocol.h  batchaction.cpp  batchaction.h  batchscriptparser.cpp  batchscriptparser.h  instrumentprotocol.h
C++/Ar488QtConsoleProject/src/transport/: qtserialtransport.cpp  qtserialtransport.h  serialtransport.h
C++/Ar488QtConsoleProject/src/ui/: appstyle.cpp  appstyle.h  interactivechartview.cpp  interactivechartview.h
DIAGRAMS/: GPIB_Class_Diagram.vpp.bak_000f  UML_GPIB.vpp  UML_GPIB.vpp.bak_000f
DIAGRAMS/USE_CASES/: UC01-DirectTasking.md  UC01:DirectTasking  UC02:BatchTasking.md  UC03-InjectSCPIQuery.md  UC04:ReceiveSCPIQuery.md  UC05-Datalogging.md  UC06-Plotting.md
